--- a/projects/ng-nova/src/message-box/message-box.component.html
+++ b/projects/ng-nova/src/message-box/message-box.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-    <i class="material-icons">{{icon}}</i>
+    <i class="material-icons icon">{{icon}}</i>
     <div>{{title}}</div>
     <button tabindex="-1" mat-icon-button mat-dialog-close>
         <i class="material-icons">close</i>
