--- a/projects/ng-nova/src/inputs/input-number/input-number.component.scss
+++ b/projects/ng-nova/src/inputs/input-number/input-number.component.scss
@@ -7,6 +7,8 @@ input{
     margin: 0;
     min-width: 10px;
     width: inherit;
+    font-size: inherit;
+    background-color: inherit;
 }
 
 .left{
