--- a/projects/ng-nova/src/message-box/message-box.component.scss
+++ b/projects/ng-nova/src/message-box/message-box.component.scss
@@ -25,6 +25,7 @@ mat-dialog-content{
                 align-items: center;
                 column-gap: 5px;
                 margin: 0;
+                padding-top: .3em;
                 padding-left: .5em;
                 padding-right: .3em;
                 button i{
