--- a/projects/app-testing/src/app/app.component.html
+++ b/projects/app-testing/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1>{{type}}</h1>
 <section style="display: flex; row-gap: 1em; flex-direction: column;">
     <h2>Message box</h2>
     <div style="display: flex; column-gap: 1em; row-gap: 1em;">
@@ -22,6 +23,8 @@
             Alert Confirm disable close
         </button>
     </div>
+    
+<!-- 
     <div style="display: flex; column-gap: 1em; row-gap: 1em;">
         <button mat-stroked-button (click)="onMessageBoxInfo()">
             Info
@@ -44,7 +47,7 @@
             Error Confirm disable close
         </button>
     </div>
-</section>
+</section> -->
 <br>
 <br>
 <br>
