--- a/projects/app-testing/src/app/inputs/inputs.component.html
+++ b/projects/app-testing/src/app/inputs/inputs.component.html
@@ -15,9 +15,11 @@
     </mat-form-field>
     <mat-form-field appearance="standard">
         <mat-label>Numero</mat-label>
-        <input type="text" matInput>
+        <input type="text" matInput class="number">
     </mat-form-field>
 </div>
+
+<input class="number">
 
 <button (click)="send()">
     ver
