--- a/projects/ng-nova/src/inputs/input-number/input-number.component.html
+++ b/projects/ng-nova/src/inputs/input-number/input-number.component.html
@@ -1,10 +1,8 @@
 <input
 #input
-class="nv-input-number"
+class="number"
 [ngClass]="textAling"
 [(ngModel)]="inputValue"
 [attr.aria-labelledby]="getLabelId()"
 (focusin)="onFocusIn($event)"
-(focusout)="onFocusOut($event)"
-(keypress)="keyPress($event)"
-(keyup)="keyUp($event)">
+(focusout)="onFocusOut($event)">
