--- a/projects/ng-nova/src/inputs/input-cellphone/input-cellphone.component.html
+++ b/projects/ng-nova/src/inputs/input-cellphone/input-cellphone.component.html
@@ -4,30 +4,28 @@
      (focusin)="onFocusIn($event)"
      (focusout)="onFocusOut($event)">
        <span class="example-tel-input-spacer">&#40;</span>
-       <input class="example-tel-input-element"
+       <input class="example-tel-input-element number"
               formControlName="area" size="3"
               maxLength="3"
               aria-label="Area code"
               (input)="_handleInput(getControl('area'), exchange)"
-              inputmode="tel"
               #area>
        <span class="example-tel-input-spacer">&#41;</span>
-       <input class="example-tel-input-element"
+       <input class="example-tel-input-element number"
               formControlName="exchange"
               maxLength="3"
               size="3"
               aria-label="Exchange code"
               (input)="_handleInput(getControl('exchange'), subscriber)"
-              inputmode="tel"
               (keyup.backspace)="autoFocusPrev(getControl('exchange'), area)"
               #exchange>
        <span class="example-tel-input-spacer">&ndash;</span>
-       <input class="example-tel-input-element"
+       <input class="example-tel-input-element number"
+              style="text-align: left;"
               formControlName="subscriber"
               maxLength="4"
               size="4"
               aria-label="Subscriber number"
-              inputmode="tel"
               (input)="_handleInput(getControl('subscriber'))"
               (keyup.backspace)="autoFocusPrev(getControl('subscriber'), exchange)"
               #subscriber>
