--- a/projects/ng-nova/src/inputs/input-currency/input-currency.component.scss
+++ b/projects/ng-nova/src/inputs/input-currency/input-currency.component.scss
@@ -1,7 +1,11 @@
+:host{
+    width: inherit;
+}
 div{
     display: grid;
     align-items: center;
-    grid-template-columns: 1fr 4px 2em;
+    grid-template-columns: 1fr 4px 2.5em;
+    width: inherit;
     font-size: inherit;
 
     input{
